changing css and html texts

--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     <section class="cards container">
         <article class="card">
             <div class="card-header">
-                <p>Course</p>
-                <h2>Update Tableau Data Sources</h2>
+                <p>Case Studies</p>
+                <h2>Explore our customer stories</h2>
             </div>
             <div class="card-body">
-                <p class="title-desc">How to build an integration flow to automatically update Tableau data sources with Salesforce data.</p>
+                <p class="title-desc">Discover how organizations in your industry are leveraging MuleSoft to innovate faster than ever before</p>
             </div>
             <div>
                 <a href="#" class="link-with-arrow">
@@ -89,12 +89,12 @@
 
         <article class="card">
             <div class="card-header">
-                <p>Course</p>
-                <h2>Update Tableau Data Sources</h2>
+                <p>Blog</p>
+                <h2>Get advice from IT leaders</h2>
             </div>
 
             <div class="card-body">
-                <p class="title-desc">How to build an integration flow to automatically update Tableau data sources with Salesforce data.</p>
+                <p class="title-desc">Learn from experts who are using integration, APIs, and automation to deliver digital initiatives faster</p>
             </div>
 
             <div>
@@ -106,12 +106,13 @@
 
         <article class="card">
             <div class="card-header">
-                <p>Course</p>
-                <h2>Update Tableau Data Sources</h2>
+                <p>Webcast</p>
+                <h2>Tune into our CIO webcast series</h2>
             </div>
 
             <div class="card-body">
-                <p class="title-desc">How to build an integration flow to automatically update Tableau data sources with Salesforce data.</p>
+                <p class="title-desc">Hear directly from CIOs about how they’re delivering business outcomes faster for their organizations
+                </p>
             </div>
             <div>
                 <a href="#" class="link-with-arrow">
